--- a/lplayer.css
+++ b/lplayer.css
@@ -184,7 +184,7 @@
         height: 30px;
         width: 100%;
         background-color: rgb(255, 255, 255);
-        border-top: 1px solid rgba(0, 0, 0, 0.5);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
     }
         .lpl-list-item-num{
             position: absolute;
