--- a/lplayer.css
+++ b/lplayer.css
@@ -19,6 +19,9 @@
     width: 100px;
     height: 100px;
     background-image: url(asset/cover.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #lpl-title{
     position: absolute;
