--- a/lplayer.css
+++ b/lplayer.css
@@ -47,6 +47,14 @@
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
     color: rgba(0, 0, 0, 0.5);
 }
+#lpl-duration{
+    position: absolute;
+    right: 5px;
+    top: 70px;
+    font-size: 15px;
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
+}
 #lpl-control{
     position: absolute;
     left: 100px;
@@ -83,7 +91,7 @@
         left: 130px;
         width: 30px;
         height: 30px;
-        background-image: url(asset/icons/black/shuffle.svg);
+        background-image: url(asset/icons/black/repeat.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
