--- a/lplayer.css
+++ b/lplayer.css
@@ -10,6 +10,7 @@
 }
 #lpl-body.dark{
     background: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 #lpl-cover{
     position: absolute;
@@ -30,6 +31,7 @@
 }
 #lpl-title.dark{
     color: rgba(255,255,255,0.7);
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
 }
 #lpl-title::selection{
     color: rgb(255, 255, 255);
@@ -43,6 +45,10 @@
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
     color: rgba(0, 0, 0, 0.5);
 }
+#lpl-artist{
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+}
 #lpl-artist::selection{
     color: rgb(255, 255, 255);
     background: rgba(233, 81, 147, 0.7);
@@ -55,6 +61,10 @@
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
     color: rgba(0, 0, 0, 0.5);
 }
+#lpl-album.dark{
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
+}
 #lpl-album::selection{
     color: rgb(255, 255, 255);
     background: rgba(233, 81, 147, 0.7);
@@ -66,6 +76,10 @@
     font-size: 15px;
     text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
     color: rgba(0, 0, 0, 0.5);
+}
+#lpl-duration.dark{
+    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.5);
 }
 #lpl-duration::selection{
     color: rgb(255, 255, 255);
@@ -83,6 +97,9 @@
     width: calc(100% - 100px);
     height: 100px;
     background-image: linear-gradient(rgba(255, 255, 255, 0.4) 0,rgba(255,255,255,0.7) 50%,rgba(255, 255, 255, 0.4) 100%);
+}
+#lpl-control.dark{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0,rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.4) 100%);
 }
     .lpl-control-button{
         cursor: pointer;
@@ -142,6 +159,9 @@
         border-radius: 5px;
         background-color: rgba(0, 0, 0, 0.5);
     }
+    #lpl-control-volumeController.dark{
+        background-color: rgba(255, 255, 255, 0.5);
+    }
         .lpl-control-volumeController-progress{
             position: absolute;
             top: 0;
@@ -173,6 +193,9 @@
     height: 10px;
     background-color: rgba(0, 0, 0, 0.5);
 }
+#lpl-control-progressBar.dark{
+    background-color: rgba(255, 255, 255, 0.5);
+}
     .lpl-control-progressBar-progress{
         position: absolute;
         top: 0;
@@ -202,6 +225,7 @@
 }
 #lpl-list.dark{
     background: rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 10px rgb(255, 255, 255);
 }
     .lpl-list-item:hover{
         background-color: rgba(233, 81, 147, 0.3);
@@ -216,12 +240,22 @@
         background-color: rgb(255, 255, 255);
         border-bottom: 1px solid rgba(0, 0, 0, 0.5);
     }
+    .lpl-list-item.dark{
+        background-color: rgba(0, 0, 0, 0);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    }
+    .lpl-list-item.dark:hover{
+        background-color: rgba(233, 81, 147, 0.7);
+    }
         .lpl-list-item-num{
             position: absolute;
             left: 10px;
             top: 2px;
             font-size: 26px;
             color: rgba(0, 0, 0, 0.5);
+        }
+        .lpl-list-item-num.dark{
+            color: rgba(255,255,255,0.7);
         }
         .lpl-list-item-title{
             z-index: 1;
@@ -234,6 +268,7 @@
         }
         .lpl-list-item-title.dark{
             color: rgb(255,255,255);
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
         }
         .lpl-list-item-artist{
             z-index: 1;
@@ -242,6 +277,9 @@
             top: 2px;
             font-size: 26px;
             color: rgba(0, 0, 0, 0.7);
+        }
+        .lpl-list-item-artist.dark{
+            color: rgba(255,255,255,0.7);
         }
         .lpl-list-item-num::selection{
             color: rgb(255, 255, 255);
