--- a/lplayer.css
+++ b/lplayer.css
@@ -1,16 +1,19 @@
-
+lplayer{
+    --theme-rgb: 0,0,0;
+    --theme-rgb-rev: 255,255,255;
+}
+lplayer div::selection{
+    color: rgb(var(--theme-rgb-rev));
+    background: rgba(233, 81, 147, 0.7);
+}
 #lpl-body{
     position: absolute;
     top: 0;
     left: 0;
     height: 100px;
     width: 100%;
-    background: rgb(255, 255, 255);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-#lpl-body.dark{
-    background: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    background: rgb(var(--theme-rgb-rev));
+    box-shadow: 0 0 10px rgba(var(--theme-rgb),0.5);
 }
 #lpl-cover{
     position: absolute;
@@ -23,67 +26,36 @@
 }
 #lpl-title{
     position: absolute;
+    color: rgb(var(--theme-rgb));
     left: 120px;
     top: 10px;
     font-weight: 600;
     font-size: 20px;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-#lpl-title.dark{
-    color: rgba(255,255,255,0.7);
-    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
-}
-#lpl-title::selection{
-    color: rgb(255, 255, 255);
-    background: rgba(233, 81, 147, 0.7);
+    text-shadow: 1px 1px 2px rgba(var(--theme-rgb), 0.5);
 }
 #lpl-artist{
     position: absolute;
     left: 120px;
     top: 40px;
     font-size: 15px;
-    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
-    color: rgba(0, 0, 0, 0.5);
-}
-#lpl-artist{
-    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
-    color: rgba(255, 255, 255, 0.5);
-}
-#lpl-artist::selection{
-    color: rgb(255, 255, 255);
-    background: rgba(233, 81, 147, 0.7);
+    text-shadow: 0.5px 0.5px 1px rgba(var(--theme-rgb), 0.5);
+    color: rgba(var(--theme-rgb), 0.5);
 }
 #lpl-album{
     position: absolute;
     left: 120px;
     top: 60px;
     font-size: 15px;
-    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
-    color: rgba(0, 0, 0, 0.5);
-}
-#lpl-album.dark{
-    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
-    color: rgba(255, 255, 255, 0.5);
-}
-#lpl-album::selection{
-    color: rgb(255, 255, 255);
-    background: rgba(233, 81, 147, 0.7);
+    text-shadow: 0.5px 0.5px 1px rgba(var(--theme-rgb), 0.5);
+    color: rgba(var(--theme-rgb), 0.5);
 }
 #lpl-duration{
     position: absolute;
     right: 5px;
     top: 70px;
     font-size: 15px;
-    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.5);
-    color: rgba(0, 0, 0, 0.5);
-}
-#lpl-duration.dark{
-    text-shadow: 0.5px 0.5px 1px rgba(255, 255, 255, 0.5);
-    color: rgba(255, 255, 255, 0.5);
-}
-#lpl-duration::selection{
-    color: rgb(255, 255, 255);
-    background: rgba(233, 81, 147, 0.7);
+    text-shadow: 0.5px 0.5px 1px rgba(var(--theme-rgb), 0.5);
+    color: rgba(var(--theme-rgb), 0.5);
 }
 #lpl-control:hover{
     opacity: 1;
@@ -96,10 +68,7 @@
     top: 0;
     width: calc(100% - 100px);
     height: 100px;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.4) 0,rgba(255,255,255,0.7) 50%,rgba(255, 255, 255, 0.4) 100%);
-}
-#lpl-control.dark{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0,rgba(0, 0, 0, 0.7) 50%,rgba(0, 0, 0, 0.4) 100%);
+    background-image: linear-gradient(rgba(var(--theme-rgb-rev), 0.4) 0,rgba(var(--theme-rgb-rev),0.7) 50%,rgba(var(--theme-rgb-rev), 0.4) 100%);
 }
     .lpl-control-button{
         cursor: pointer;
@@ -157,10 +126,7 @@
         width: 100px;
         height: 10px;
         border-radius: 5px;
-        background-color: rgba(0, 0, 0, 0.5);
-    }
-    #lpl-control-volumeController.dark{
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(var(--theme-rgb), 0.5);
     }
         .lpl-control-volumeController-progress{
             position: absolute;
@@ -176,7 +142,7 @@
             left: 50%;
             border: 8px solid rgb(233, 81, 147);
             border-radius: 50%;
-            box-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
+            box-shadow: 0 0 2px rgba(var(--theme-rgb), 0.7);
             transform: translate(-8px,-3px);
         }
 
@@ -191,10 +157,7 @@
     bottom: 0;
     width: calc(100% - 100px);
     height: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-#lpl-control-progressBar.dark{
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(var(--theme-rgb), 0.5);
 }
     .lpl-control-progressBar-progress{
         position: absolute;
@@ -209,7 +172,7 @@
         left: 50%;
         border: 8px solid rgb(233, 81, 147);
         border-radius: 50%;
-        box-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
+        box-shadow: 0 0 2px rgba(var(--theme-rgb), 0.7);
         transform: translate(-8px,-3px);
     }
 
@@ -221,11 +184,7 @@
     height: calc(100% - 100px);
     width: 100%;
     overflow-y: scroll;
-    box-shadow: 0 0 10px rgb(0, 0, 0);
-}
-#lpl-list.dark{
-    background: rgba(0, 0, 0, 0.7);
-    box-shadow: 0 0 10px rgb(255, 255, 255);
+    box-shadow: 0 0 10px rgb(var(--theme-rgb));
 }
     .lpl-list-item:hover{
         background-color: rgba(233, 81, 147, 0.3);
@@ -237,25 +196,15 @@
         position: relative;
         height: 30px;
         width: 100%;
-        background-color: rgb(255, 255, 255);
-        border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-    }
-    .lpl-list-item.dark{
-        background-color: rgba(0, 0, 0, 0);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-    }
-    .lpl-list-item.dark:hover{
-        background-color: rgba(233, 81, 147, 0.7);
+        background-color: rgb(var(--theme-rgb-rev));
+        border-bottom: 1px solid rgba(var(--theme-rgb), 0.5);
     }
         .lpl-list-item-num{
             position: absolute;
             left: 10px;
             top: 2px;
             font-size: 26px;
-            color: rgba(0, 0, 0, 0.5);
-        }
-        .lpl-list-item-num.dark{
-            color: rgba(255,255,255,0.7);
+            color: rgba(var(--theme-rgb), 0.5);
         }
         .lpl-list-item-title{
             z-index: 1;
@@ -263,12 +212,8 @@
             left: 60px;
             top: 2px;
             font-size: 26px;
-            color: rgb(0, 0, 0);
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-        }
-        .lpl-list-item-title.dark{
-            color: rgb(255,255,255);
-            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+            color: rgb(var(--theme-rgb));
+            text-shadow: 1px 1px 2px rgba(var(--theme-rgb), 0.5);
         }
         .lpl-list-item-artist{
             z-index: 1;
@@ -276,22 +221,7 @@
             right: 10px;
             top: 2px;
             font-size: 26px;
-            color: rgba(0, 0, 0, 0.7);
-        }
-        .lpl-list-item-artist.dark{
-            color: rgba(255,255,255,0.7);
-        }
-        .lpl-list-item-num::selection{
-            color: rgb(255, 255, 255);
-            background: rgba(233, 81, 147, 0.7);
-        }
-        .lpl-list-item-title::selection{
-            color: rgb(255, 255, 255);
-            background: rgba(233, 81, 147, 0.7);
-        }
-        .lpl-list-item-artist::selection{
-            color: rgb(255, 255, 255);
-            background: rgba(233, 81, 147, 0.7);
+            color: rgba(var(--theme-rgb), 0.7);
         }
 llyric{
     height: inherit;
@@ -309,24 +239,16 @@ llyric{
     }
         .llyricText{
             text-align: center;
-            color: black;
-            text-shadow: 1px 1px 4px black;
+            color: rgb(var(--theme-rgb));
+            text-shadow: 1px 1px 4px rgb(var(--theme-rgb));
             font-size: 20px;
             position: relative;
             width: 100%;
             height: 50px;
-        }
-        .llyricText::selection{
-            color: rgb(255, 255, 255);
-            background: rgba(233, 81, 147, 0.7);
         }
         .llyricText.selected{
             font-size: 30px;
             color: rgba(233, 81, 147, 0.7);
             text-shadow: 1px 1px 10px rgba(233, 81, 147, 0.7);
             height: 75px;
-        }
-        .llyricText.dark{
-            color: white;
-            text-shadow: 1px 1px 4px rgb(255, 255, 255);
         }
